--- a/text/citace.bib
+++ b/text/citace.bib
@@ -227,7 +227,7 @@ ISS prodlouzeni do 2024
 %NASA, Columbus Laboratory
 @online{columbus,
     author={Jerry Wright},
-    title={Station Facts and Figures},
+    title={Columbus Laboratory},
     url={https://www.nasa.gov/mission_pages/station/structure/elements/columbus.html},
     date={2015-07-31},
     organization={NASA},
