--- a/text/parts/experimentDosis.tex
+++ b/text/parts/experimentDosis.tex
@@ -32,7 +32,7 @@ OHB System AG, Universitätsallee 27-29, 28359 Bremen, Germany\\
   \end{tabularx}
 \end{table}
 
-Měření byla, respektive jsou prováděna pasivními a aktivními detektory, které jsou pevně umístěny v modulu Columbus. Pasivní detektory zajišťují určení prostorové distribuce dávky a dlouhodobého vývoje pole záření, aktivní naopak slouží k určení změn pole záření v čase. V případě aktivních detektorů se jedná o dva detektory DOSTEL (DOSimetry TELescope). V dalším textu se budeme zabývat pouze pasivními detektory.
+Měření byla, respektive jsou prováděna pasivními a aktivními detektory, které jsou pevně umístěny v modulu Columbus. Pasivní detektory zajišťují určení prostorové distribuce dávky a dlouhodobého vývoje pole záření, aktivní naopak slouží k určení změn pole záření v čase. V dalším textu se budeme zabývat hlavně pasivními detektory, o aktivních detektorech pojednává pouze oddíl~\ref{experimentDosis_activeDetectors}.
 
 \section{Rozmístění pasivních detektorů}
 V rámci experimentu DOSIS, resp. DOSIS3D je v modulu Columbus rozmístěno jedenáct PDP (Passive Detector Packages, balíčky pasivních detektorů), které obsahují termoluminiscenční detektory (TLD), detektory využívající optickou stimulaci (OSLD) a detektory stop v pevné fázi (TED). Na obr.~\ref{fig:columbus_rozmisteni} vidíme rozmístění PDP; pět z nich je umístěno na čelní stěně, dalších šest na zadní stěně. Jedenáctý balíček označený symbolem X, též označovaný jako Triple PDP (trojitý PDP), je umístěn blízko aktivních detektorů a pokrývá větší plochu než ostatní PDP. Osm PDP je umístěno ve skříňových modulech (viz oddíl~\ref{sec:ISS_columbus}); více informací o umístění pasivních detektorů je k dostání v~\cite{dosis}. %další obrázek???
@@ -143,13 +143,13 @@ NPI			 &Al$_2$O$_3$:C&Al$_2$O$_3$:C\\
 
 NPI používá dva TL detektory, Al$_2$O$_3$:C a CaSO$_4$:Dy. Oba dva jsou vyhodnocovány pomocí čtecího systému RA’94 (THORN EMI 9789 QB) nebo TOLEDO 654 TLD Reader; rychlost zahřívání u obou je rovna 10 $^{\circ}$C/s; první není předehříván, druhý je předehříván na 150 $^{\circ}$C (22 s); annealing probíhá 20 minut za 700 $^{\circ}$C (Al$_2$O$_3$:C), respektive 10 minut za 380 $^{\circ}$C (CaSO$_4$:Dy); oba dva rychle chladnou; kalibrování probíhá u obou pomocí $^{137}$Cs; u obou je vyhodnocována plocha pod vyhřívací křivkou. Oba dva mají průměr roven 5 mm a tloušťku rovnou 1 mm.
 \subsection{Opticky stimulované luminiscenční detektory}
-Detektory založené na opticky stimulované luminiscenci využívají následující instituce: OSU, SCK$\cdot$CEN, NASA/SRAG, NIRS. Jsou vyrobené z jednoho materiálu (Al$_2$O$_3$:C), avšak liší se v následujících parametrech: čtecí systém, příkon energie stimulujícího laseru působící na centimetr čtvereční detektoru, filtr, doba stimulace, kalibrační metoda a kalibrační zdroj, vyhodnocení OSL křivky. Všechny tyto parametry lze pro používané OSL detektory dohledat v~\cite{dosis}. 
+Detektory založené na opticky stimulované luminiscenci využívají následující instituce: OSU, SCK$\cdot$CEN, NASA/SRAG, NIRS. Jsou vyrobené z jednoho materiálu (Al$_2$O$_3$:C), avšak liší se v následujících parametrech: čtecí systém, příkon energie stimulujícího laseru působící na centimetr čtvereční detektoru, filtr, doba stimulace, kalibrační metoda, kalibrační zdroj a vyhodnocení OSL křivky. Všechny tyto parametry lze pro používané OSL detektory dohledat v~\cite{dosis}. 
 %nedělat tabulku, vypsat instituce normálně; ze je to jeden materiál (Al$_2$O$_3$:C), ale různé parametry; jejich vyhodnocování probíhá pomocí referenčního zdroje (ten vztah asi nepsat); to je asi vše, bude to krátké
 \subsection{Detektory stop v pevné fázi}
-Všechny používané detektory stop v pevné fázi jsou CR-39. V tab.~\ref{tab:dosis_pouzivaneTED} jsou uvedeny instituce, které TED využívají; tabulka také obsahuje výrobce daného TED. Avšak tato tabulka již není aktuální, jelikož většina institucí přešla v posledních letech na TASTRAK o tloušťce 1~mm, který byl původně využíván pouze MTA EK. Různorodost využívaných TED a jejich způsobů vyhodnocení totiž komplikovalo vzájemné porovnávání a interpretaci naměřených dat~\cite{cesky}. TASTRAK, který je v tabulce u IPF, má tloušťku 0,7~mm. Důležitými parametry jsou: doba leptání; teplota, při níž leptání probíhá; koncentrace NaOH, jímž se leptalo; odleptaná vrstva; analyzovaná plocha.
+Všechny používané detektory stop v pevné fázi jsou CR-39. V tab.~\ref{tab:dosis_pouzivaneTED} jsou uvedeny instituce, které TED využívají; tabulka také obsahuje výrobce daného TED. Ale tato tabulka již není aktuální, protože většina institucí přešla v posledních letech na TASTRAK o tloušťce 1~mm, který byl původně využíván pouze MTA EK. Různorodost využívaných TED a jejich způsobů vyhodnocení totiž komplikovalo vzájemné porovnávání a interpretaci naměřených dat~\cite{cesky}. TASTRAK, který je v tabulce u IPF, má tloušťku 0,7~mm. Důležitými parametry jsou: doba leptání; teplota, při níž leptání probíhá; koncentrace NaOH, jímž se leptalo; odleptaná vrstva; analyzovaná plocha.
 \begin{table}[h]
   \centering
-  \caption{Přehled institucí používající TED, u každé instituce jsou uvedeny výrobci příslušného detektoru. V posledních letech většina institucí přešla k používání TASTRAKu o tloušťce 1~mm.~\cite{dosis}}
+  \caption{Přehled institucí používající TED, u každé instituce jsou uvedeni výrobci příslušného detektoru. V posledních letech většina institucí přešla k používání TASTRAKu o tloušťce 1~mm.~\cite{dosis}}
   \label{tab:dosis_pouzivaneTED}
   \begin{tabular}{ll}
 	\toprule
@@ -197,7 +197,7 @@ Na naměřená data lze pohlížet z několika hledisek. Nejprve je uvedeno srov
 %Srovnáním dat od TL detektorů z DOSIS3D s daty získanými v ISS mimo modul Columbus od detektorů stejného materiálu plyne, že velmi závisí na lokálním stínění. Data se v závislosti na jeho tloušťce mohou lišit až dvojnásobně.  
 %Vzhledem k tomu, že tato práce je primárně zaměřena na detektory stop v pevné fázi, tak jsou informace v tomto oddíle značně povrchní. %MOZNA ZMENIT?!!!!
 \subsection{Srovnání dat pasivních detektorů v rámci jedné sady}
-V obr. \ref{fig:dosis_vysl_jednaSada} jsou uvedeny dávkové příkony naměřené detektory z 2. sady DOSIS3D v závislosti na pozici detektoru, tzn. na PDP. Jedná se o TL detektory z materiálů: $^6$LiF:Mg,Ti; $^7$LiF:Mg,Ti; CaF$_2$:Tm; $^{\text{Nat}}$LiF:Mg,Ti; $^6$LiF:Mg,Cu,P; $^7$LiF:Mg,Cu,P; Al$_2$O$_3$:C a CaSO$_4$:Dy a o všechny OSL detektory. Je vidět, že data ze všech detektorů sledují v podstatě stejný trend a že dávkové příkony z detektorů stejného materiálu vycházejí přibližně stejně. Avšak na druhou stranu jsou zde patrné rozdíly mezi naměřenými dávkovými příkony detektorů různých materiálů. Jedním z důvodů je rozdílná účinnost detekce těžkých nabitých částic každého TL/OSL materiálu (viz oddíl \ref{sec:detektory_TLD}).
+V obr. \ref{fig:dosis_vysl_jednaSada} jsou uvedeny dávkové příkony naměřené detektory z 2. sady DOSIS3D v závislosti na pozici detektoru, tzn. na PDP. Jedná se o TL detektory z materiálů: $^6$LiF:Mg,Ti; $^7$LiF:Mg,Ti; CaF$_2$:Tm; $^{\text{Nat}}$LiF:Mg,Ti; $^6$LiF:Mg,Cu,P; $^7$LiF:Mg,Cu,P; Al$_2$O$_3$:C a CaSO$_4$:Dy a o všechny OSL detektory. Je vidět, že data ze všech detektorů sledují v podstatě stejný trend a že dávkové příkony z detektorů stejného materiálu vycházejí přibližně stejně. Naopak jsou zde patrné rozdíly mezi dávkovými příkony naměřenými detektory různých materiálů. Jedním z důvodů je rozdílná účinnost detekce těžkých nabitých částic každého TL/OSL materiálu (viz oddíl \ref{sec:detektory_TLD}).
 \begin{table}[H]
   \centering
   \caption{Poměry odezev TLD materiálů s odezvou referenčního $^7$LiF:Mg,Ti. Odezvou se myslí určená dávka z daného detektoru \cite{dosis}.}
@@ -230,7 +230,7 @@ Výsledky z OSLD jsou celkem ve shodě vzhledem k rozmanitosti vyhodnocovacích 
   \label{fig:dosis_vysl_jednaSada}
 \end{figure}
 \subsection{Srovnání dat z osmi sad pro jeden druh pasivního detektoru}
-Srovnávala se data od TLD $^7$LiF:Mg,Ti ze všech PDP. Obr. \ref{fig:dosis_vysl_viceSad} zobrazuje zprůměrovaný rozsah dávkových příkonů ze všech PDP; průměrování probíhalo pro každé PDP jednotlivě přes příkony určené několika organizacemi.
+Srovnávala se data od TLD $^7$LiF:Mg,Ti ze všech PDP. Obr. \ref{fig:dosis_vysl_viceSad} zobrazuje rozsah zprůměrovaných dávkových příkonů ze všech PDP; průměrování probíhalo pro každé PDP jednotlivě přes příkony určené několika organizacemi.
 %které byly určeny z dat $^7$LiF:Mg,Ti od několika organizací; 
 Například pro D3D2 (druhá sada DOSIS3D) je interval naměřených dávkových příkonů přibližně [250, 350] $\mu$Gy/den (lze srovnat s obr. \ref{fig:dosis_vysl_jednaSada}). Na ose $x$ je čas v letech. Obrázek dále obsahuje v horní části nadmořskou výšku ISS a četnost neutronů naměřených Oulu monitorem (viz oddíl \ref{sec:dosis_altitudeSlunecniCyklus}). Pokles dávkového příkonu z DOS1 na DOS2 (sady 1 a 2 experimentu DOSIS) byl způsoben vzrůstající sluneční aktivitou; prudký vzrůst z DOS2 na D3D1 je spojen s nárazovitým zvýšením nadmořské výšky ISS; poté se už nadmořská výška moc neměnila a pomalý pokles je tedy dán
 hlavně vzrůstající sluneční aktivitou. Je zajímavé, že při D3D6 detektory obdržely jen o trochu vyšší dávky než při DOS1.
@@ -277,7 +277,7 @@ Data z DOSIS a DOSIS3D je možné srovnat i s daty z jiných experimentů. Zde u
 \item Na různých místech v americké části ISS jsou od organizace NASA/SRAG umístěné tzv. monitory prostorového rozložení záření (RAM, Radiation Area Monitor), které obsahují termoluminiscenční detektory ($^7$LiF:Mg,Ti) a slouží ke stanovení prostorové distribuce dávky v ISS~\cite{RAM}. Můžeme tedy srovnávat jejich výsledky s výsledky DOSIS/DOSIS3D. RAM detektory měřily na ISS od dubna 2014 do listopadu 2014, celkem 218 dní; tato doba pokrývá pátou a částečně i šestou sadu DOSIS3D (tab.~\ref{tab:dosis_timeline_passive}). V modulu Columbus byly naměřeny pomocí $^7$LiF:Mg,Ti dávkové příkony v rozsahu $[216\pm8;313\pm9]$ $\mu$Gy/den, v rámci programu RAM bylo rozpětí naměřených dávkových příkonů $[201\pm5;421\pm12]$ $\mu$Gy/den. Minimum je tedy přibližně stejné, avšak maximum je vyšší pro RAM. To bylo naměřeno v
   blízkosti okénka, a tudíž ho lze spojit s nižším stíněním. Celkově lze z těchto srovnání tvrdit, že dávkové příkony se v jednotlivých modulech mohou v závislosti na lokálním stínění lišit až dvojnásobně.~\cite{dosis}
 
-\item V letech 2007 a 2009 probíhalo měření spadající pod experiment MATROSHKA-R pomocí TLD (Al-P) a TED (HARZLAS TD-1, Page) v Ruském provozním modulu Zvezda (informace o modulu jsou k dohlednání např. v~\cite{serviceModule}) a v modulu Pirs~(\cite{piers1}); více o průběhu měření viz tab. \ref{tab:dosis_passDetectors_timeline}. Detektory byly v obou případech umístěny v šesti tzv. SPD (sborka passivnych detektorov, obdoba PDP u DOSIS\&DOSIS3D), přičemž dva SPD se nacházely v Pirs modulu a čtyři ve Zvezdě. 
+\item V letech 2007 a 2009 probíhala měření spadající pod experiment MATROSHKA-R pomocí TLD (Al-P) a TED (HARZLAS TD-1, Page) v Ruském provozním modulu Zvezda (informace o modulu jsou k dohlednání např. v~\cite{serviceModule}) a v modulu Pirs~(\cite{piers1}); více o průběhu měření viz tab. \ref{tab:dosis_passDetectors_timeline}. Detektory byly v obou případech umístěny v šesti tzv. SPD (sborka passivnych detektorov, obdoba PDP u DOSIS\&DOSIS3D), přičemž dva SPD se nacházely v Pirs modulu a čtyři ve Zvezdě. 
 \begin{table}[h]
   \centering
   \caption{Časový vývoj měření v ruských modulech Zvezda a Pirs. \cite{passDetectors}}
@@ -321,7 +321,7 @@ nejistot není~\cite{passDetectors}.
   stálosti nadmořské výšky a dalších parametrů jsou rozdíly v dávkách dány hlavně stíněním celého objektu, menší rozdíly jsou pak způsobeny lokálním stíněním (které je představováno např. uloženými zásobami, přístroji).~\cite{ambrozova_dvaExperimenty}
   \item Článek~\cite{ambrozova_dvaExperimenty} poskytuje i porovnání s daty, které byly naměřeny v jiné nadmořské výšce. Satelit BION-M1 byl vypuštěn 19. dubna 2013 a na orbitě o nadmořské výšce 575 km setrval 30 dní. Obsahoval mj. biologické vzorky a detektory, konkrétně TLD CaSO$_4$:Dy a TED HARZLAS TD-1. Ty byly uloženy ve čtyřech boxech uvnitř satelitu a ve dvou boxech na vnějším plášti satelitu. Průměr z dávkových příkonů naměřených ve vnitřních boxech pomocí TLD činí 967 $\mu$Gy/den, ve vnějších boxech 2,2 mGy/den. Nadmořská výška ISS byla přibližně 409 km a v modulu Columbus byl naměřen dávkový příkon cca 275 $\mu$Gy/den, viz předchozí odrážka. Tyto obrovské rozdíly v naměřených hodnotách ukazují důležitost vlivu změny nadmořské výšky (ISS proti BION-M1, ovšem dále je třeba vzít
 	v úvahu, že BION-M1 byl méně stíněn) a stínění (vnitřek proti vnějšku satelitu BION-M1).
-  \item V japonském modulu Kibo~\cite{kibo} probíhá již od jeho připojení k ISS v roce 2008 měření pomocí TLD (prášek Mg$_2$SiO$_4$:Tb) a TED (CR-39 materiál HARZLAS TD-1 od výrobce Fukuvi chemical) v rámci projektu PADLES (PAssive Dosimeters for Lifescience Experiments in Space). V letech 2008 až 2010 proběhly tři obměny detektorů (viz tab.~\ref{tab:dosis_kibo}).
+  \item V japonském modulu Kibo~\cite{kibo} probíhá již od jeho připojení k ISS v roce 2008 měření pomocí TLD (prášek Mg$_2$SiO$_4$:Tb) a TED (HARZLAS TD-1) v rámci projektu PADLES (PAssive Dosimeters for Lifescience Experiments in Space). V letech 2008 až 2010 proběhly tři obměny detektorů (viz tab.~\ref{tab:dosis_kibo}).
 	\begin{table}[ht]
 	  \centering
 	  \caption{PADLES v modulu Kibo.~\cite{japonsky}}
@@ -336,8 +336,8 @@ nejistot není~\cite{passDetectors}.
 	\bottomrule
 	  \end{tabular}
 	\end{table}
-	Detektory byly umístěny na dvanácti pozicích v Přetlakovém modulu, v případě třetí fáze navíc i na pěti pozicích v Logistickém modulu (přetlaková komora). Průměrný dávkový příkon naměřený TLD v první fázi je $311\pm 30$ $\mu$Gy/den, v druhé fázi $268\pm29$ $\mu$Gy/den, v třetí fázi pro Přetlakový modul $286\pm33$ $\mu$Gy/den a pro Logistický modul $289\pm27$ $\mu$Gy/den. V době první fáze PADLES experiment DOSIS ještě neprobíhal. Druhá a třetí fáze PADLES odpovídá přibližně první a druhé sadě experimentu DOSIS (červenec 2009 až květen 2010). Rozsahy dávkových příkonů z $^7$LiF:Mg,Ti z těchto sad jsou přibližně $[225;300]$ $\mu$Gy/den, resp. $[200;265]$ $\mu$Gy/den (viz obr. \ref{fig:dosis_vysl_viceSad}). Vidíme, že data z modulů Kibo a Columbus jsou velmi podobná. To, že $\dot{D}$ z
-	druhé fáze na třetí fázi PADLES vzrostl, zatímco u DOSIS klesl, může být dáno různým počátkem a koncem fází u PADLES a DOSIS. \cite{japonsky}
+	Detektory byly umístěny na dvanácti pozicích v Přetlakovém modulu, v případě třetí fáze navíc i na pěti pozicích v Logistickém modulu-přetlaková komora. Průměrný dávkový příkon naměřený TLD v první fázi je $311\pm 30$ $\mu$Gy/den, v druhé fázi $268\pm29$ $\mu$Gy/den, v třetí fázi pro Přetlakový modul $286\pm33$ $\mu$Gy/den a pro Logistický modul $289\pm27$ $\mu$Gy/den. V době první fáze PADLES experiment DOSIS ještě neprobíhal. Druhá a třetí fáze PADLES odpovídá přibližně první a druhé sadě experimentu DOSIS (červenec 2009 až květen 2010). Rozsahy dávkových příkonů z $^7$LiF:Mg,Ti z těchto sad jsou přibližně $[225;300]$ $\mu$Gy/den, resp. $[200;265]$ $\mu$Gy/den (viz obr. \ref{fig:dosis_vysl_viceSad}). Vidíme, že data z modulů Kibo a Columbus jsou velmi podobná. To, že $\dot{D}$ z
+	druhé fáze na třetí fázi PADLES vzrostl, zatímco u DOSIS klesl, může být dáno různým počátkem a koncem měření u PADLES a DOSIS.~\cite{japonsky}
   \item K monitorování dávkových příkonů v ISS se používá i Pille TLD systém~\cite{pilleClanek}. Tento systém byl využíván na každé kosmické stanici od druhé poloviny 70. let 20. století.
 	\begin{table}[ht]
 	  \centering
