--- a/text/parts/praktickaCast.tex
+++ b/text/parts/praktickaCast.tex
@@ -1,6 +1,6 @@
 \chapter{Vyhodnocení detektorů stop v pevné fázi (praktická část)}
 \section{Metodika}\label{sec:praktickaCast_metodika}
-NPI používá materiál HARZLAS TD-1 (výrobce Fukuvi chemical, dodavatel Nagase Landauer Ltd.) a od roku 2016 i TASTRAK (výrobce Track Analysis Systems Ltd.)~\cite{cesky}. HARZLAS TD-1 je leptán 18 hodin za teploty 70 $^{\circ}$C v 5 N koncentrovaném roztoku NaOH; odleptaná vrstva je kolem 15,3 $\mu$m. Velikost analyzované plochy se volí tak, aby bylo vyšetřeno alespoň tisíc stop (kvůli zajištění dostatečné statistiky). Detektor je tlustý 0.9 mm. TASTRAK se leptá dvoufázově: první fáze trvá 6 hodin a jsou při ní zobrazeny stopy vytvořené částicemi s velkým $\mathit{LET}$; při druhé fázi, která trvá dalších 9 hodin, se zobrazí i stopy pocházejících od částic s nižším $\mathit{LET}$. Celkový čas leptání je tedy 15 hodin. Buď se postupuje postupným leptáním (6 hodin leptání, vyhodnocení, 9 hodin leptání, vyhodnocení), nebo se část detektoru leptá 6 hodin a část 15 hodin, tudíž
+NPI používá materiál HARZLAS TD-1 (výrobce Fukuvi chemical, dodavatel Nagase Landauer Ltd.) a od roku 2016 i TASTRAK (výrobce Track Analysis Systems Ltd.)~\cite{cesky}. HARZLAS TD-1 je leptán 18 hodin za teploty 70 $^{\circ}$C v 5 N koncentrovaném roztoku NaOH; odleptaná vrstva je kolem 15,3 $\mu$m. Velikost analyzované plochy se volí tak, aby bylo vyšetřeno alespoň tisíc stop (kvůli zajištění dostatečné statistiky). Detektor je tlustý 0,9~mm. TASTRAK se leptá dvoufázově: první fáze trvá 6 hodin a jsou při ní zobrazeny stopy vytvořené částicemi s velkým $\mathit{LET}$; při druhé fázi, která trvá dalších 9 hodin, se zobrazí i stopy pocházejících od částic s nižším $\mathit{LET}$. Celkový čas leptání je tedy 15 hodin. Buď se postupuje postupným leptáním (6 hodin leptání, vyhodnocení, 9 hodin leptání, vyhodnocení), nebo se část detektoru leptá 6 hodin a část 15 hodin, tudíž
 detektor lze vyhodnotit najednou. Detektor se leptá při 70 $^{\circ}$C v 6,25 N koncentrovaném roztoku NaOH, odleptaná vrstva je tlustá 7,5/20,1 $\mu$m; velikost analyzované plochy TASTRAKu se volí stejným kritériem jako u HARZLAS TD-1. Po leptání následuje u obou detektorů nasnímání stop lineárním snímacím zařízením s vysokým rozlišením (které je součástí mikroskopu HSP-1000~\cite{dosis_HSP1000}), poté jsou snímky se stopami analyzovány programem HspFit~\cite{hspClanek}.
 
 Zatímco HARZLAS TD-1 detekuje částice s $\LET$ vyšším než 7 keV/$\mu$m~\cite{cesky}, TASTRAK má detekční práh kolem 15 keV/$\mu$m, resp. 10 keV/$\mu$m~\cite{ssntd} pro kratší, resp. delší leptání; detekční práh TASTRAKu pro kratší leptání byl určen z detektorů, jejichž vyhodnocení je popsáno v dalším oddíle. Na druhou stranu TASTRAK má vyšší rozsah měřitelných $\LET$ a díky leptání per partes detekuje s mnohem větší účinností částice s vyšším $\LET$ než HARZLAS TD-1~\cite{cesky}.
@@ -191,12 +191,12 @@ Aby $\LET$ spektra na obrázcích~\ref{fig:praktickaCast_LETcetnost}, \ref{fig:p
 	\label{fig:praktickaCast_LETdavkEkvivalent}
 \end{figure}
 \section{Diskuze}
-Ze spekter vidíme, že byly registrovány částice s $\LET\in[15;1000]$ keV/$\mu$m; dolní hranice je dána detekčním prahem TASTRAKu a horní hranice byla uměle nastavena s přihlédnutím k rozsahu kalibrační křivky. Nejpočetnější složku tvoří dle spektra~\ref{fig:praktickaCast_LETcetnost} stopy s $\LET$ v rozsahu 30 až 200 keV/$\mu$m. Ty odpovídají nejspíš protonům, které pocházejí z SAA nebo z interakcí neutronů s materiálem detektoru, a $\alpha$ částicím. Protony mají ve vodě maximální $\LET$ kolem 80-90~keV/$\mu$m, $\alpha$ částice kolem 200~keV/$\mu$m~\cite{SRIM}. Stopy s nižším $\LET$ mohou odpovídat sekundárním elektronům (max. $\LET$ ve vodě cca 30~keV/$\mu$m) a iontům z primárního kosmického záření, stopy s vyšším $\LET$ odpovídají hlavně odraženým jádrům O, C atd. Ze stejného spektra je
-také vidět, že bylo detekováno relativně málo částic s malým $\LET$ (mezi 20 a 30 keV/$\mu$m). To je způsobeno kratší dobou leptání detektorů, po které nebyla většina stop s malým $\LET$ ještě odhalena. 
+Ze spekter vidíme, že byly registrovány částice s $\LET\in[15;1000]$ keV/$\mu$m; dolní hranice je dána detekčním prahem TASTRAKu a horní hranice byla uměle nastavena s přihlédnutím k rozsahu kalibrační křivky. Nejpočetnější složku tvoří dle spektra~\ref{fig:praktickaCast_LETcetnost} stopy s $\LET$ v rozsahu 30 až 200 keV/$\mu$m. Ty odpovídají nejspíš protonům, které pocházejí z SAA nebo z interakcí neutronů s materiálem detektoru, a $\alpha$ částicím. Protony mají ve vodě maximální $\LET$ kolem 84~keV/$\mu$m, $\alpha$ částice kolem 220~keV/$\mu$m~\cite{SRIM}. Stopy s nižším $\LET$ mohou odpovídat sekundárním elektronům a iontům z primárního kosmického záření, stopy s vyšším $\LET$ odpovídají hlavně odraženým jádrům O, C atd. Ze stejného spektra je
+také vidět, že bylo detekováno relativně málo částic s malým $\LET$ (mezi 15 a 30 keV/$\mu$m). To je způsobeno kratší dobou leptání detektorů, po které nebyla většina stop s malým $\LET$ ještě odhalena. 
 
 Na obr. \ref{fig:praktickaCast_LETcetnost} a v tab. \ref{tab:praktickaCast_analyzovanaPlocha} je vidět, že v prvním detektoru bylo analyzováno nejvíce stop a že tento nadbytek oproti ostatním detektorům tvoří stopy s nižším $\LET$. Toto může být způsobeno tím, že jsem při ručním analyzování stop prvního detektoru připustil do dalších výpočtů i tzv. přeleptané stopy. Přeleptaná stopa je stopa od částice s krátkým dosahem (sekundární částice), která byla v průběhu leptání vyleptána až do konce dráhy původní částice v materiálu, a poté leptání stopy pokračovalo do všech stran, tj. probíhalo zaoblování stopy. Důsledkem je rozostření jejího okraje, což znemožňuje fitovat stopu elipsou. To je důvod, proč taková stopa neposkytuje žádnou relevantní informaci.
 
-Spektra pro dávku a dávkový ekvivalent názorně ukazují rozdíl mezi těmito dvěma veličinami. Dávka vyjadřuje množství deponované energie v jednotce hmotnosti, dávk. ekvivalent je dávka přenásobená jakostním činitelem $Q(\LET)$, který vyjadřuje biologický účinek záření. Označme $D_i$, resp. $H_i$ dílčí dávku, resp. dílčí dávk. ekvivalent od částic s $\LET$ v daném $\LET$ intervalu. Na obr.~\ref{fig:praktickaCast_LETdavka} pozorujeme, že $D_i$ nejprve v závislosti na zvyšujícím se $\LET$ roste a přibližně u 100 keV/$\mu$m nabývá maxima; za touto hodnotu dávka značně fluktuuje, ale dá se říct, že pozvolně klesá. $H_i$ (obr.~\ref{fig:praktickaCast_LETdavkEkvivalent}) nabývá maxima také u 100 keV/$\mu$m, ale jeho růst, resp. pokles je mnohem strmější. To odpovídá faktu, že $Q$ je spojitou funkcí $\LET$,
+Spektra pro dávku a dávkový ekvivalent názorně ukazují rozdíl mezi těmito dvěma veličinami. Dávka vyjadřuje množství deponované energie v jednotce hmotnosti, dávk. ekvivalent je dávka přenásobená jakostním činitelem $Q(\LET)$, který vyjadřuje biologický účinek záření. Označme $D_i$, resp. $H_i$ dílčí dávku, resp. dílčí dávk. ekvivalent od částic s $\LET$ v daném $\LET$ intervalu. Na obr.~\ref{fig:praktickaCast_LETdavka} pozorujeme, že $D_i$ nejprve v závislosti na zvyšujícím se $\LET$ roste a přibližně u 100 keV/$\mu$m nabývá maxima; za touto hodnotou $D_i$ značně fluktuuje, ale dá se říct, že pozvolně klesá. $H_i$ (obr.~\ref{fig:praktickaCast_LETdavkEkvivalent}) nabývá maxima také u 100 keV/$\mu$m, ale jeho růst, resp. pokles je mnohem strmější. To odpovídá faktu, že $Q$ je spojitou funkcí $\LET$,
 která nabývá maxima v 100 keV/$\mu$m, tj. částice s $\LET=\nobreak100$~keV/$\mu$m způsobují největší poškození organismu. Dále lze pozorovat, že přenásobením $Q$ bylo spektrum vyhlazeno (ve smyslu odstranění fluktuací). Pro znázornění rozdílnosti strmostí růstů a poklesů ve spekter jsou v tab.~\ref{tab:praktickaCast_relPrispevkyDavka} zobrazeny pro třetí detektor relativní příspěvky k celkové dávce a dávk. ekvivalentu od částic s $\LET$ v daném $\LET$ rozsahu.
 \begin{table}[ht]
   \centering
@@ -213,7 +213,7 @@ která nabývá maxima v 100 keV/$\mu$m, tj. částice s $\LET=\nobreak100$~keV/
   \end{tabular}
 \end{table}
 
-Dávkové příkony určené z vyhodnocených TED (tab.~\ref{tab:praktickaCast_davkyVysledky}) jsou mnohem menší než dávkové příkony určené z TLD (viz. oddíl \ref{sec:dosis_vysledky}; lze předpokládat, že $\dot{D}$ z osmé sady budou vycházet alespoň řádově jako $\dot{D}$ v předchozích sadách). Je to tím, že převážná část absorbované dávky pochází od částic s $\LET$ menším než je detekční práh TASTRAKu. Na druhou stranu příkony dávk. ekvivalentů od TED a od TLD jsou stejného řádu, což je způsobeno větší biologickou účinností částic s vyšším $\LET$. Podobné rozdíly mezi dávkovými příkony od TLD a TED byly naměřeny i v jiných experimentech, např.~\cite{passDetectors,ambrozova_dvaExperimenty, japonsky}, zde uvedeme data z~\cite{passDetectors}. V tab.~\ref{tab:praktickaCast_rozdilyJinyExp} jsou uvedena data naměřená v rámci experimentu MATROSHKA-R v
+Dávkové příkony určené z vyhodnocených TED (tab.~\ref{tab:praktickaCast_davkyVysledky}) jsou mnohem menší než dávkové příkony určené z TLD (viz. oddíl \ref{sec:dosis_vysledky}; lze předpokládat, že $\dot{D}_{\text{TLD}}$ z osmé sady budou vycházet alespoň řádově jako $\dot{D}_{\text{TLD}}$ v předchozích sadách). Je to tím, že převážná část absorbované dávky pochází od částic s $\LET$ menším než je detekční práh TASTRAKu. Na druhou stranu příkony dávk. ekvivalentů od TED a od TLD jsou stejného řádu, což je způsobeno větší biologickou účinností částic s vyšším $\LET$. Podobné rozdíly mezi dávkovými příkony od TLD a TED byly naměřeny i v jiných experimentech, např.~\cite{japonsky,passDetectors,ambrozova_dvaExperimenty}, zde uvedeme data z~\cite{passDetectors}. V tab.~\ref{tab:praktickaCast_rozdilyJinyExp} jsou uvedena data naměřená v rámci experimentu MATROSHKA-R v
 ruském modulu Zvezda v roce 2009. Lze pozorovat, že dávkové příkony od TED jsou přibližně 10-krát menší než od TLD. Oproti tomu jsou příkony dávk. ekvivalentů od TED mírně vyšší než od TLD. To poukazuje na důležitost monitorování částic s vyšším $\LET$ i přes fakt, že tvoří jen malý zlomek celkové dávky.
 \begin{table}[h]
   \centering
