--- a/text/parts/titlepage.tex
+++ b/text/parts/titlepage.tex
@@ -31,7 +31,7 @@ V Praze dne \\[10pt]
 \newpage
 \vspace*{\fill}
 \section*{Poděkování}
-Děkuji Ing. Ivě Ambrožové, Ph.D. za vedení mé bakalářské práce, za cenné rady a připomínky, které tuto práci obohatily.
+Děkuji Ing. Ivě Ambrožové, Ph.D. za vedení mé bakalářské práce, za cenné rady a připomínky, které tuto práci obohatily. Dále děkuji mé rodině za veškerou podporu, kterou mi během studia poskytla.
 \newpage
 \begin{tabularx}{\textwidth}{>{\itshape}l X}
   Název práce: & \textbf{Prostorová distribuce dávky uvnitř Mezinárodní kosmické stanice}\\
