--- a/text/parts/uvod.tex
+++ b/text/parts/uvod.tex
@@ -7,5 +7,5 @@ Za účelem zmonitorování prostorové distribuce dávky v blízkém okolí Zem
 
 K měření se využívají pasivní i aktivní detektory. U pasivní složky měření převládají termoluminiscenční detektory a detektory stop v pevné fázi. Termoluminiscenční detektory měří dávku obdrženou za celou dobu měření. Pomocí detektorů stop lze určit lineární přenos energie ($\LET$) primárních i sekundárních částic, které mají $\LET$ větší než přibližně 10 keV/$\mu$m, a tím je možné vytvořit $\LET$ spektrum pole záření v místě měření. Z $\LET$ částice je možné určit další veličiny.
 
-Tato práce pojednává nejprve o kosmickém záření v blízkém okolí Země, tj. o jeho zdrojích a o faktorech, které ho ovliňují. Druhá kapitola se zaměřuje na termoluminiscenční detektory a detektory stop. Je zde podrobně rozebrána podstata měření detektory stop a způsob jejich vyhodnocování. Třetí kapitola zmiňuje stručné informace o Mezinárodní kosmické stanici. Ve čtvrté kapitole jsou podrobně popsány experimenty DOSIS a DOSIS3D, tzn. jejich průběh (s vývojem nadmořské výšky ISS a sluneční aktivity), používané detektory, jejich rozmístění. Dostupné výsledky byly srovnány z několika hledisek, např. pro různé časové úseky, různé umístění detektorů; také proběhlo porovnání s výsledky
+Tato práce pojednává nejprve o kosmickém záření v blízkém okolí Země, tj. o jeho zdrojích a o faktorech, které ho ovliňují. Druhá kapitola se zaměřuje na termoluminiscenční detektory a detektory stop. Je zde rozebrána podstata měření detektory stop a způsob jejich vyhodnocování. Třetí kapitola zmiňuje stručné informace o Mezinárodní kosmické stanici. Ve čtvrté kapitole jsou podrobně popsány experimenty DOSIS a DOSIS3D, tzn. jejich průběh (s vývojem nadmořské výšky ISS a sluneční aktivity), používané detektory, jejich rozmístění. Dostupné výsledky byly srovnány z několika hledisek, např. pro různé časové úseky, různé umístění detektorů; také proběhlo porovnání s výsledky
 z jiných experimentů. V poslední praktické části byla na úvod nastíněna metodika vyhodnocování detektorů stop používaných Oddělením dozimetrie záření Ústavu jaderné fyziky AVČR, poté zde bylo rozebráno mnou provedené vyhodnocení několika detektorů stop.
