--- a/text/parts/ISS.tex
+++ b/text/parts/ISS.tex
@@ -16,7 +16,7 @@ Mezinárodní kosmická stanice (ISS, International Space Station) je umělá dr
   \label{fig:ISS_celek}
 \end{figure}
 
-Na obr. \ref{fig:ISS_celek} je vidět struktura stanice. Páteří stanice je téměř 100 m dlouhý nosník, tzv. Integrated Truss Structure, ke kterému jsou připojeny fotovoltaické panely, moduly ISS a další části. Stanice byla postavena postupným skládáním přímo na orbitě, což si vyžádalo desítky kosmických letů. Zatím poslední připojená část BEAM (Bigelow Expandable Activity Module, nafukovací modul) byla vynesena na orbitu v roce 2016~\cite{ISS_gifs}. V tab. \ref{tab:ISS_parametry} jsou k dispozici základní parametry stanice.
+Na obr. \ref{fig:ISS_celek} je vidět struktura stanice. Páteří stanice je 109~m dlouhý nosník~\cite{ISS_facts}, tzv. Integrated Truss Structure, ke kterému jsou připojeny fotovoltaické panely, moduly ISS a další části. Stanice byla postavena postupným skládáním přímo na orbitě, což si vyžádalo desítky kosmických letů. Zatím poslední připojená část BEAM (Bigelow Expandable Activity Module, nafukovací modul) byla vynesena na orbitu v roce 2016~\cite{ISS_gifs}. V tab. \ref{tab:ISS_parametry} jsou k dispozici základní parametry stanice.
 \begin{table}[h]
   \centering
   \caption{Základní parametry ISS~\cite{ISS_facts}.}
@@ -42,7 +42,7 @@ ISS bude provozována minimálně do roku 2024~\cite{ISS_prodlouzeni} a celkové
 \section{Modul Columbus}\label{sec:ISS_columbus}
 Modul Columbus je největším příspěvkem ESA k ISS.
 
-Jedná se o laboratorní modul zaměřený na výzkum v biologii, materiálových vědách, fyziku tekutin a další výzkumy v mikrogravitaci. Obsahuje deset skříňových modulů pro experimenty (International Standard Payload Racks), každý z nich poskytuje nezávislé ovládání energie, chlazení a také komunikaci s pozemními dispečery a vědci. Navíc na vnější straně laboratoře jsou čtyři plošiny, na které jdou umístit vědecké přístroje. Modul je 7 m dlouhý, jeho průměr činí 4,5 m a váží 10 300 kg (vše jsou přibližné hodnoty).~\cite{columbus}.
+Jedná se o laboratorní modul zaměřený na výzkum v biologii, materiálových vědách, fyziku tekutin a další výzkumy v mikrogravitaci. Obsahuje deset skříňových modulů pro experimenty (International Standard Payload Racks), každý z nich poskytuje nezávislé ovládání energie, chlazení a také komunikaci s pozemními dispečery a vědci. Navíc na vnější straně laboratoře jsou čtyři plošiny, na které jdou umístit vědecké přístroje. Modul je 7 m dlouhý, jeho průměr činí 4,5 m a váží 10 300 kg (vše jsou přibližné hodnoty)~\cite{columbus}.
 
 Právě v tomto modulu probíhal experiment DOSIS a v současnosti běží experiment DOSIS3D. 
 \begin{figure}[H]
